# octrashield-dex

./: .env  .env.example  .gitignore  AUTH_SETUP_REPORT.md  CONTRIBUTING.md  GITHUB_AUTH_GUIDE.md  INSTALLATION_REPORT.md  LICENSE  MOCK_IMPLEMENTATION_GUIDE.md  MOCK_PACKAGES_README.md  Makefile  PHASE0_ARCHITECTURE.md  PHASE1_CONTRACTS.md  PHASE2_SDK.md  PHASE3_FRONTEND.md  README.md  SDK_API_ANALYSIS.md  deploy.py  deploy_fixed.py  deploy_quick.py  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml  setup-auth.sh  verify_and_redeploy.py
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
app/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/__tests__/: components.test.tsx  pages.test.tsx  setup.ts
app/src/components/common/: Button.tsx  Card.tsx  EncryptedValue.tsx  Modal.tsx  Spinner.tsx  StatusBadge.tsx  TokenIcon.tsx  TokenInput.tsx  Tooltip.tsx  index.ts
app/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  index.ts
app/src/config/: theme.ts  tokens.ts
app/src/pages/: AddLiquidity.tsx  Dashboard.tsx  PoolDetail.tsx  Pools.tsx  Portfolio.tsx  Positions.tsx  Swap.tsx
app/src/providers/: OctraProvider.tsx  WalletProvider.tsx
config/: octra-network.json
contracts/: Cargo.toml
contracts/ai_engine/: Cargo.toml  ai_engine.move
contracts/ai_engine/src/: lib.rs
contracts/aml/: ai_engine.aml  factory.aml  pair.aml  router.aml  shield_token.aml
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/pair/: Cargo.toml
contracts/pair/src/: contract.rs  lib.rs  state.rs  tests.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: constants.rs  errors.rs  hfhe.rs  lib.rs  math.rs  ocs01.rs  tests.rs  types.rs
contracts/shield_token/: Cargo.toml
contracts/shield_token/src/: lib.rs
docker/: Dockerfile  docker-compose.yml
examples/: basic-mock-example.ts  mock-sdk-usage.ts  package.json  swap-flow-example.ts  test-mock-implementation.ts
mock-octra-hfhe/: package-lock.json  package.json  tsconfig.json
mock-octra-hfhe/src/: index.test.ts  index.ts
mock-octra-sdk/: package-lock.json  package.json
mock-octra-sdk/src/: index.ts
scripts/: test-mock.sh
sdk/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
sdk/src/: index.ts
sdk/src/__tests__/: clients.test.ts  hfhe.test.ts  hooks.test.ts  math.test.ts  routing.test.ts  setup.ts
sdk/src/clients/: ai-engine.ts  factory.ts  index.ts  pair.ts  router.ts  shield-token.ts
sdk/src/core/: constants.ts  errors.ts  hfhe.ts  index.ts  ocs01.ts  types.ts
sdk/src/hooks/: index.ts  useAI.ts  useLiquidity.ts  useOctraShield.ts  usePool.ts  useSwap.ts  useToken.ts
sdk/src/utils/: encoding.ts  index.ts  math.ts  routing.ts
