[workspace]
members = [
    "shared",
    "factory",
    "pair",
    "router",
    "ai_engine",
    "shield_token",
]
resolver = "2"

[workspace.dependencies]
octra-sdk = { git = "https://github.com/octra-labs/octra-sdk", branch = "main" }
octra-hfhe = { git = "https://github.com/octra-labs/octra-hfhe", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
