[workspace]
members = [
    "shared",
    "factory",
    "pair",
    "router",
    "ai_engine",
    "shield_token",
]
resolver = "2"

# ==============================================================================
# Workspace Dependencies
#
# NOTE: octra-sdk and octra-hfhe do not exist as standalone repos on octra-labs.
# We pin to the closest valid alternatives from https://github.com/octra-labs:
#   - octra-hfhe  -> pvac_hfhe_cpp  (C++17 HFHE library; Rust bindings via FFI)
#   - octra-sdk   -> ocs01-test     (Rust OCS01 contract testing framework)
#
# Pinned to specific commit hashes for reproducible builds (as of 2026-04-10):
#   pvac_hfhe_cpp  @ 728397c4c648750766b4d55fbb6b0ac65c15fb8b
#   ocs01-test     @ 8e9bb451ea460c0f4fe371551ff6da5ea07184ac
#
# TODO: Once official octra-sdk and octra-hfhe Rust crates are published to
# crates.io or a dedicated repo, replace these git dependencies with versioned
# crate references (e.g. octra-sdk = "1.0").
# ==============================================================================
octra-sdk = { git = "https://github.com/octra-labs/ocs01-test", rev = "8e9bb451ea460c0f4fe371551ff6da5ea07184ac" }
octra-hfhe = { git = "https://github.com/octra-labs/pvac_hfhe_cpp", rev = "728397c4c648750766b4d55fbb6b0ac65c15fb8b" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
