[package]
name = "octrashield-factory"
version = "0.1.0"
edition = "2021"
authors = ["OctraShield Team"]
description = "OctraShieldFactory - Pool registry and deployer for OctraShield DEX"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
octrashield-shared = { path = "../shared" }
octra-sdk = { workspace = true }
octra-hfhe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
