[package]
name = "octrashield-router"
version = "0.1.0"
edition = "2021"
authors = ["OctraShield DEX Contributors"]
description = "OctraShield DEX — Multi-hop swap and liquidity router contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "octrashield_router"

[dependencies]
octrashield-shared = { path = "../shared" }
borsh = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
