[package]
name = "octrashield-shared"
version = "0.1.0"
edition = "2021"
authors = ["OctraShield Team"]
description = "Shared types, HFHE wrappers, and OCS01 interfaces for OctraShield DEX"

[dependencies]
octra-sdk = { workspace = true }
octra-hfhe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
